# veil

./: .gitignore  Caddyfile  Cargo.toml  INTEGRATION_ROADMAP.md  README.md  ROADMAP.md  VEIL_DESIGN.md  deny.toml  docker-compose.yml
.github/workflows/: coverage.yml  go.yml  rust.yml  security.yml
veil-client/: Cargo.toml  build.rs
veil-client/src/: api.rs  connection.rs  lib.rs  protocol.rs
veil-client/tests/: e2e_client.rs
veil-crypto/: .gitignore  Cargo.toml
veil-crypto/src/: aead.rs  chunked_aead.rs  fingerprint.rs  kdf.rs  keys.rs  lib.rs  ratchet.rs  sender_key.rs  share.rs  signature.rs  x3dh.rs
veil-crypto/tests/: e2e_crypto.rs
veil-desktop/: index.html  package.json  pnpm-lock.yaml  router_backup_netcraze.txt  tsconfig.json  vite.config.ts
veil-desktop/src/: App.tsx  app.css  main.tsx
veil-desktop/src-tauri/: Cargo.toml  tauri.conf.json
veil-desktop/src-tauri/capabilities/: default.json
veil-desktop/src-tauri/icons/: icon.icns
veil-desktop/src-tauri/src/: lib.rs  main.rs  mls_cmd.rs
veil-desktop/src/components/chat/: FriendsPanel.tsx  LockScreen.tsx  MessageRenderer.tsx  NewDmDialog.tsx  OnboardingScreen.tsx  SettingsScreen.tsx
veil-desktop/src/components/layout/: AppLayout.tsx  ChannelSidebar.tsx  ChatIsland.tsx  DetailsSidebar.tsx  ServerRail.tsx
veil-desktop/src/components/server/: CreateChannelDialog.tsx  CreateInviteDialog.tsx  CreateServerDialog.tsx  JoinServerDialog.tsx  ServerSettingsScreen.tsx
veil-desktop/src/components/ui/: CommandPalette.tsx  Island.tsx  IslandDialog.tsx  IslandSelect.tsx  IslandSheet.tsx  avatar.tsx  badge.tsx  button.tsx  context-menu.tsx  emoji-picker.tsx  input.tsx  switch.tsx  textarea.tsx  toast.tsx  tooltip.tsx
veil-desktop/src/lib/: mls.ts  zIndex.ts
veil-desktop/src/stores/: app.ts
veil-ffi/: Cargo.toml
veil-ffi/src/: lib.rs
veil-mls/: Cargo.toml
veil-mls/src/: lib.rs  store.rs
veil-mobile/: App.tsx  app.json  package.json  pnpm-lock.yaml  react-native.config.js  tsconfig.json
veil-mobile/src/components/layout/: ChannelsIsland.tsx  ChatIsland.tsx  MembersIsland.tsx  ServerRailIsland.tsx  TopRail.tsx
veil-mobile/src/components/onboarding/: GlowBlobs.tsx  HebrewRain.tsx  TaglineCarousel.tsx
veil-mobile/src/components/ui/: Island.tsx  IslandButton.tsx
veil-mobile/src/lib/: theme.ts
veil-mobile/src/native/: crypto.ts
veil-mobile/src/screens/: ChatListScreen.tsx  OnboardingScreen.tsx
veil-mobile/src/stores/: auth.ts  chat.ts
veil-proto/: .gitignore  README.md
veil-proto/veil/v1/: auth.proto  chat.proto  envelope.proto  friends.proto  media.proto  presence.proto  server.proto  share.proto  voice.proto
veil-search/: Cargo.toml
veil-search/src/: lib.rs
veil-server/: .gitignore  Dockerfile  go.mod  go.sum
veil-server/cmd/auth/: main.go
veil-server/cmd/chat/: main.go
veil-server/cmd/gateway/: main.go
veil-server/cmd/gateway/downloads/: .gitkeep  README.md  SHA256SUMS
veil-server/cmd/gateway/web/: index.html  legal.css  privacy.html  robots.txt  security.txt  sitemap.xml  terms.html
veil-server/internal/auth/: auth.go  auth_test.go  handler.go  handler_test.go
veil-server/internal/authmw/: lint_test.go  ratelimit.go  ratelimit_test.go  signed.go  signed_test.go
veil-server/internal/chat/: chat.go  handler.go
veil-server/internal/config/: config.go  config_test.go
veil-server/internal/db/: db.go  push.go  queries.go  servers.go  uploads.go
veil-server/internal/gateway/: gateway_test.go  hardening_test.go  hub.go  ratelimit.go  ratelimit_test.go
veil-server/internal/httpmw/: accesslog.go  httpmw_test.go  security.go
veil-server/internal/integration/: chat_integration_test.go  harness.go  invites_integration_test.go  members_integration_test.go  roles_integration_test.go  servers_integration_test.go
veil-server/internal/metrics/: metrics.go
veil-server/internal/mls/: handler.go  store.go
veil-server/internal/push/: db_adapter.go  dispatcher.go  dispatcher_test.go  envelope.go  envelope_test.go  handler.go
veil-server/internal/servers/: handler.go  service.go
veil-server/internal/uploads/: config.go  handler.go  hooks.go  hooks_test.go  json.go  store.go  token.go
veil-server/migrations/: 001_initial.sql  002_edit_delete.sql  003_reactions.sql  004_friends.sql  005_servers.sql  006_push.sql  007_uploads.sql  008_mls.sql
veil-server/pkg/proto/v1/: auth.pb.go  chat.pb.go  envelope.pb.go  friends.pb.go  media.pb.go  presence.pb.go  server.pb.go  share.pb.go  voice.pb.go
veil-share-viewer/: Cargo.toml
veil-share-viewer/src/: lib.rs
veil-share-viewer/static/: index.html
veil-store/: Cargo.toml
veil-store/src/: db.rs  keychain.rs  lib.rs  models.rs
veil-uploads/: Cargo.toml
veil-uploads/src/: client.rs  lib.rs  stream.rs
