[package]
name = "veil-client"
version = "0.1.0"
edition = "2021"
description = "Protocol engine for Veil messenger — WebSocket, Protobuf, session management"

[dependencies]
veil-crypto = { path = "../veil-crypto" }
veil-store = { path = "../veil-store" }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
zeroize = "1"

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

[build-dependencies]
prost-build = "0.13"
