[package]
name = "veil-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Protocol engine for Veil messenger — WebSocket, Protobuf, session management"

[dependencies]
veil-crypto = { path = "../veil-crypto" }
veil-store = { path = "../veil-store" }
veil-search = { path = "../veil-search" }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
x25519-dalek = { version = "2", features = ["static_secrets"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
rand = "0.8"
zeroize = "1"

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }

[build-dependencies]
prost-build = "0.13"
