[package]
name = "veil-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "veil_ffi"

[dependencies]
veil-crypto = { path = "../veil-crypto" }
uniffi = { version = "0.29", features = ["cli"] }
thiserror = "2"
serde_json = "1"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
