[package]
name = "veil-mls"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OpenMLS (RFC 9420) wrapper for Veil — Phase 6 group E2EE."

[dependencies]
# OpenMLS — single cipher suite: MLS_128_DHKEMX25519_AES128GCM_SHA256_Ed25519.
openmls = { version = "0.7", default-features = false }
openmls_rust_crypto = "0.4"
openmls_traits = "0.4"
openmls_basic_credential = "0.4"
openmls_memory_storage = "0.4"

# Encoded payloads on the wire are TLS-serialized blobs; we keep them as
# opaque Vec<u8> on the boundary, base64 only at REST/JSON layer.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
# multi-client roundtrip tests
