[package]
name = "veil-search"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local-only Tantivy full-text index for decrypted Veil messages"

[dependencies]
tantivy = "0.22"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
