[package]
name = "veil-share-viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window", "Document", "HtmlElement", "HtmlInputElement",
  "console",
] }
veil-crypto = { path = "../veil-crypto" }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
