[package]
name = "veil-uploads"
version = "0.1.0"
edition = "2021"
authors = ["NaveLIL <warthunder.bizon@proton.me>"]
description = "Resumable encrypted uploads for Veil messenger (tus.io client + chunked AEAD streaming)"
license = "MIT"

[dependencies]
veil-crypto = { path = "../veil-crypto" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["fs", "io-util", "rt", "macros", "sync"] }
bytes = "1"
base64 = "0.22"
rand = "0.8"
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
