[package]
name = "veil-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "veil_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-os = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
veil-crypto = { path = "../../veil-crypto" }
veil-store = { path = "../../veil-store" }
veil-client = { path = "../../veil-client" }
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
